<resources>
    <string name="app_name">verflix</string>
    <string name="ir_al_menu">Ir al Menú</string>
    <string name="cambiar_usuario">Cambiar Usuario</string>
    <string name="bienvenido_a_verflix">Bienvenido a Verflix</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="otro">Otro</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="hola">Hola, %1$s</string>
    <string name="caricaturas">Caricaturas</string>
    <string name="accion">Acción</string>
    <string name="terror">Terror</string>
    <string name="category_image_desc">Imagen de la categoría</string>
    <string name="image_profile_desc">Descripción de la imagen del perfil</string>
    <string name="dialog_title_take_picture">Tomar Foto de Perfil</string>
    <string name="btn_play">Reproducir</string>
    <string name="btn_pause">Pausar</string>
    <string name="btn_forward">Adelantar</string>
    <string name="btn_rewind">Retroceder</string>
    <string name="capture_image_button_text">Capturar Imagen</string>
    <string name="error_categoria_no_reconocida">Error.</string>
    <string name="error_edad_invalida">Error:.</string>
    <string name="error_datos_incompletos">Error:.</string>
    <string name="error_lectura_datos">Error: No se pudo leer los datos del usuario.</string>
    <string name="debes_tomarte_foto">Debes tomarte una foto antes de reproducir el video</string>
    <string name="permiso_camara_denegado">Permiso de cámara denegado</string>
    <string name="select_user">Seleccionar Usuario</string>
    <string name="usuario_default">Usuario</string>
    <string name="delete_user"> Eliminar Usuario</string>
    <string name="confirm_delete"> Confirmar eliminacion</string>
</resources>