<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/bienvenido_a_verflix"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/btnGoToMenu"
        style="@style/WelcomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/ir_al_menu" />

    <Button
        android:id="@+id/btnChangeUser"
        style="@style/WelcomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnGoToMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/cambiar_usuario"
        android:visibility="gone" />

</RelativeLayout>

